--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.12.1",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node": "^18.20.1",
+    "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "prisma": "^5.12.1"
   },
   "name": "digitalmarketing",
@@ -9,7 +19,9 @@
   "description": "digital marketing agency",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node server/db/seed.js",
+    "server": " nodemon server/index.js"
   },
   "repository": {
     "type": "git",
